PayDayHandler now calculates sum pay of all shifts and displays correct date.

--- a/static/style.css
+++ b/static/style.css
@@ -125,4 +125,6 @@ td {
 
 .payday {
     font-size: 120%;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
